fixed overflow issue in ie

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 	body {
 		font-family: 'Lato', 'Helvetica Neue', Arial, sans-serif;
 		color: #222122;
+		overflow: hidden;
 	}
 
 	h1 {
